--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.App {
+    background-color: azure;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#character_name {
+    margin-bottom: 0;
+}
+
+#character_type {
+    margin-top: 0;
+}
+
+.image {
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 10000px;
+    border-color: black;
+    border-width: 2px;
+    border-style: double;
+}
+
+img {
+    width: 300px;
+}
+
+#action {
+    width: 70%;
+    text-align: center;
+    font-size: large;
+    padding: 30px;
+    background-color: white;
+    border-radius: 0px 30px 30px 30px;
+    box-shadow: 0px 0px 5px #0005;
+}
+
+.form {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#text {
+    height: 40px;
+    width: 100%;
+    border: 0 none;
+    text-align: center;
+    border-bottom: solid 2px black;
+    background-color: #fff5;
+    font-size: 14pt;
+}
+
+#text::placeholder {
+    color: black;
+    opacity: 0.2;
+}
+
+#send {
+    width: 100%;
+    size: 24pt;
+    font-size: 24pt;
 }
