--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: ease-in-out 0.5s;
 }
 
 #character_name {
