--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ img {
     font-size: large;
     padding: 30px;
     background-color: white;
-    border-radius: 0px 30px 30px 30px;
+    border-radius: 20px;
     box-shadow: 0px 0px 5px #0005;
 }
 
