--- a/src/App.scss
+++ b/src/App.scss
@@ -38,9 +38,15 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    transition: ease-in-out 0.5s;
+}
+
+.app-body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     align-items: center;
     justify-content: center;
-    transition: ease-in-out 0.5s;
 }
 
 #character_name {
@@ -108,6 +114,21 @@ img {
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     border: 0 none;
-    color: #FFF;
+    color: #fff;
     background-color: black;
+    cursor: pointer;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    padding-inline: 20px;
+    gap: 8px;
+    a {
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+    }
 }
